Fix typo concatenatedValue

--- a/formula_builder.html
+++ b/formula_builder.html
@@ -611,7 +611,7 @@
     }
 
     const handleCheckboxChange = () => {
-      concatenatedValue = getCheckedOptionNames().join(cfg.delimiter);
+      const concatenatedValue = getCheckedOptionNames().join(cfg.delimiter);
       setter(concatenatedValue);
     };
 
