--- a/formula_builder.html
+++ b/formula_builder.html
@@ -485,7 +485,7 @@
                 </tr>
               </table>
             </div>
-            <textarea ref={textareaRef} value={displayFormula(formula)} onChange={event => setFormula(event.target.value)}></textarea>
+            <textarea disabled ref={textareaRef} value={displayFormula(formula)} onChange={event => setFormula(event.target.value)}></textarea>
             <button className="fullWidth border purple" onClick={insertFormula}>
               {processing ? 'Processing...' : (comparisonEnabled && args.join("").indexOf(cfg.delimiter) > -1 ? `Insert formula's in new sheet` : 'Insert Formula in active cell')}
             </button>
